# streamlit-fastapi-proxy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  app_registry.json  main.py  pyproject.toml
apps/: demo.py  test_app.py
scripts/: publish.sh
streamlit_proxy/: __init__.py  app_manager.py  app_registry.py  config.py  main.py  models.py  proxy.py  services.py
