[project]
name = "streamlit-fastapi-proxy"
version = "0.1.0"
description = "A FastAPI proxy server for managing multiple Streamlit applications with full WebSocket support"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Nir Adler", email = "me@niradler.com"}
]
keywords = ["streamlit", "fastapi", "proxy", "websocket", "multi-app"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "streamlit>=1.47.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "websockets>=15.0.1",
    "fastapi-proxy-lib>=0.3.0",
    "httpx-ws>=0.7.2",
    "psutil>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/niradler/streamlit-fastapi-proxy"
Documentation = "https://github.com/niradler/streamlit-fastapi-proxy#readme"
Repository = "https://github.com/niradler/streamlit-fastapi-proxy"
Issues = "https://github.com/niradler/streamlit-fastapi-proxy/issues"

[project.scripts]
streamlit-proxy = "streamlit_proxy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["streamlit_proxy"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
